@@ -1,6 +1,7 @@
 package io.github.bobocodebreskul.context.support;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatNoException;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
@@ -8,9 +9,12 @@ import static org.mockito.Mockito.when;
 import io.github.bobocodebreskul.context.annotations.Autowired;
 import io.github.bobocodebreskul.context.annotations.BringComponent;
 import io.github.bobocodebreskul.context.config.AnnotatedGenericBeanDefinition;
+import io.github.bobocodebreskul.context.config.BeanDependency;
+import io.github.bobocodebreskul.context.exception.BeanDefinitionDuplicateException;
 import io.github.bobocodebreskul.context.registry.BeanDefinitionRegistry;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -21,7 +25,7 @@ import org.junit.jupiter.api.TestMethodOrder;
 import org.mockito.Mockito;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
-public class BeanDefinitionReaderUtilsTest {
+class BeanDefinitionReaderUtilsTest {
 
   private BeanDefinitionRegistry registry;
 
@@ -42,36 +46,48 @@ public class BeanDefinitionReaderUtilsTest {
     String generatedBeanName = BeanDefinitionReaderUtils.generateBeanName(abd, registry);
 
     //then
-    assertThat(generatedBeanName).isNotBlank();
-    assertThat(generatedBeanName).isEqualTo(expectedBeanName);
+    assertThat(generatedBeanName)
+        .isNotBlank()
+        .isEqualTo(expectedBeanName);
   }
 
   @Test
   @DisplayName("Generate bean names for bean classes with equal name")
   @Order(2)
-  void givenEqualClassNames_WhenGenerateBeanNames_ThenReturnUniqueBeanName() {
+  void givenClassNameInRegistry_WhenGenerateBeanNames_ThenNoDuplicateExceptionIsThrown() {
+    //given
+    var abd1 = new AnnotatedGenericBeanDefinition(MyComponent.class);
+    when(registry.isBeanNameInUse(any())).thenReturn(true);
+    when(registry.getBeanDefinition(any())).thenReturn(abd1);
+
+    //when
+    //then
+    assertThatNoException()
+        .isThrownBy(() -> BeanDefinitionReaderUtils.generateBeanName(abd1, registry));
+  }
+
+  @Test
+  @DisplayName("Generate bean names for bean classes with equal name")
+  @Order(3)
+  void givenEqualClassNames_WhenGenerateBeanNames_ThenThrowBeanDefinitionDuplicateException() {
     //given
     var abd1 = new AnnotatedGenericBeanDefinition(MyComponent.class);
     var abd2 = new AnnotatedGenericBeanDefinition(
         io.github.bobocodebreskul.context.support.test.data.MyComponent.class);
     when(registry.isBeanNameInUse(any())).thenReturn(true);
     when(registry.getBeanDefinition(any())).thenReturn(abd1);
-    String expectedBeanName1 = StringUtils.uncapitalize(MyComponent.class.getSimpleName());
-    String expectedBeanName2 = io.github.bobocodebreskul.context.support.test.data.MyComponent.class.getName();
 
     //when
-    String generatedBeanName1 = BeanDefinitionReaderUtils.generateBeanName(abd1, registry);
-    String generatedBeanName2 = BeanDefinitionReaderUtils.generateBeanName(abd2, registry);
-
     //then
-    assertThat(generatedBeanName1).isNotEqualTo(generatedBeanName2);
-    assertThat(generatedBeanName1).isEqualTo(expectedBeanName1);
-    assertThat(generatedBeanName2).isEqualTo(expectedBeanName2);
+    String expectedMessage = "Bean definition %s already exist".formatted(abd2.getBeanClass().getName());
+    assertThatThrownBy(() -> BeanDefinitionReaderUtils.generateBeanName(abd2, registry))
+        .isInstanceOf(BeanDefinitionDuplicateException.class)
+        .hasMessage(expectedMessage);
   }
 
   @Test
   @DisplayName("Throw exception when nullable bean definition specified")
-  @Order(3)
+  @Order(4)
   void givenNullBeanDefinition_WhenGenerateBeanName_ThenThrowException() {
     //given
     //when
@@ -82,9 +98,9 @@ public class BeanDefinitionReaderUtilsTest {
   }
 
   @Test
-  @DisplayName("Throw exception when bean class is not specified in bean definition")
-  @Order(4)
-  void givenNullBeanClass_WhenGenerateBeanName_ThenThrowException() {
+  @DisplayName("Throw NullPointerException when bean class is not specified in bean definition")
+  @Order(5)
+  void givenNullBeanClass_WhenGenerateBeanName_ThenThrowNullPointerException() {
     //given
     var abd = new AnnotatedGenericBeanDefinition(null);
     //when
@@ -95,14 +111,38 @@ public class BeanDefinitionReaderUtilsTest {
   }
 
   @Test
+  @DisplayName("Generate bean name based on specified bean class")
+  void givenBeanClass_WhenGenerateClassBeanName_ThenReturnValidBeanName(){
+    //given
+    var beanClass = MyComponent.class;
+    var expectedBeanName = StringUtils.uncapitalize(beanClass.getSimpleName());
+
+    //when
+    var actualBeanName = BeanDefinitionReaderUtils.generateClassBeanName(beanClass);
+
+    //then
+    assertThat(actualBeanName).isEqualTo(expectedBeanName);
+  }
+
+  @Test
+  @DisplayName("Throw NullPointerException when provided class type is null")
+  void givenNullClassType_WhenGenerateClassBeanName_ThenThrowNullPointerException() {
+    // when
+    // then
+    assertThatThrownBy(() -> BeanDefinitionReaderUtils.generateClassBeanName(null))
+        .isInstanceOf(NullPointerException.class)
+        .hasMessage("Bean class has not been specified");
+  }
+
+  @Test
   @DisplayName("Verify autowired bean class defined as autowire candidate")
-  @Order(5)
+  @Order(6)
   void givenBeanClassAutowireCandidate_WhenIsBeanAutowireCandidate_ThenReturnTrue() {
     //given
     var autowiredBeanClass = MyComponent.class;
     var componentClass = AnotherComponent.class;
-    var abd = new AnnotatedGenericBeanDefinition(AnotherComponent.class);
-    abd.setDependsOn(Collections.singletonList(autowiredBeanClass));
+    var abd = new AnnotatedGenericBeanDefinition(componentClass);
+    abd.setDependencies(List.of(new BeanDependency(autowiredBeanClass.getSimpleName(), autowiredBeanClass)));
     when(registry.getBeanDefinitions()).thenReturn(List.of(abd));
 
     //when
@@ -115,12 +155,12 @@ public class BeanDefinitionReaderUtilsTest {
 
   @Test
   @DisplayName("Verify bean class without dependencies is not defined as autowire candidate")
-  @Order(5)
+  @Order(7)
   void givenBeanClass_WhenIsBeanAutowireCandidate_ThenReturnFalse() {
     //given
     var autowiredBeanClass = MyComponent.class;
     var abd = new AnnotatedGenericBeanDefinition(autowiredBeanClass);
-    abd.setDependsOn(Collections.singletonList(autowiredBeanClass));
+    abd.setDependencies(Collections.singletonList(new BeanDependency(autowiredBeanClass.getSimpleName(),autowiredBeanClass)));
     when(registry.getBeanDefinitions()).thenReturn(List.of(abd));
 
     //when
@@ -133,12 +173,14 @@ public class BeanDefinitionReaderUtilsTest {
 
   @Test
   @DisplayName("Get all dependencies of component class: constructor parameters, autowired fields, autowired method arguments")
-  @Order(6)
+  @Order(8)
   void givenBeanClassWithDependencies_WhenGetBeanDependencies_ThenReturnAllDependencyClasses() {
     //given
-    var componentClass = DependentComponent.class;
+    Class<DependentComponent> componentClass = DependentComponent.class;
     //when
-    List<Class<?>> beanDependencies = BeanDefinitionReaderUtils.getBeanDependencies(componentClass);
+    List<Class<?>> beanDependencies = BeanDefinitionReaderUtils.getBeanDependencies(componentClass).stream()
+        .map(BeanDependency::type)
+        .collect(Collectors.toList());
 
     //then
     assertThat(beanDependencies).containsExactlyInAnyOrder(
